
BUGFIX:
* type=rule ruletype=nat 'actions=exporttoexcel:test-export-service.html,ResolveServiceSummary' | bugfix for service count
* type=rule ruletype=nat | bugfix for 'filter=(dnatport eq 22)' - (dnatport has xxx) delete as missleading information

GENERAL:
* remove alias | pa_migraiton-parser, pa_appidtoolbox-* - as now covered with alias 'pan-os-php type='


2.1.2 (20230428)
UTIL:
* type=rule-merger | introduce additionalmatch=logprof - to also check that only rules with same logging profile are merged
* type=device | introduce 'filter=(devicegroup with-no-serial)'
* type=gcp | introduce actions=offboard | extend authentication with automatically open Google Chrome
* type=appid-toolbox | introduction of new type | integrate appid migration run directly by using pan-os-php alias
* type=xpath | change all filter argument to start with "filter-"
* type=appid-toolbox | introduce additional arguments to better use in bash autocompletion script |p1-marker|p2-generator|p3-cloner|p5-activation|p6-cleaner
* type=rule ruletype=nat | introduce new 'filter=(snatinterface has.regex /VALUE/)'

BUGFIX:
* Dockerfiles | update
* type=device | fix object count for utilities
* type=vendor-migration vendor=ciscoasa | bugfix during original config storing
* class CONVERTER.php | bugfix for bidirNAT adjustment

GENERAL:
* class ServiceStore | loop detection - reduce mwarning output to a single finding per $groupName
* update bash_autocompletion/pan-os-php.sh
* introduce develop script cyclePanroama_ssh.php
* bash_autocompletion | class MAXMIND | class SSH_CONNECTOR - small adjustments
* develop start sonicwall.php EXP exported config migration


2.1.1 (20230419)
UTIL:

BUGFIX:
* Dockerfile update to get everything working with new type=vendor-migration
* class Rule.php - fix for PHP7

GENERAL:


2.1.0  (20230419)
UTIL:
* type=vendor-migration | introduce 3rd party Firewall configuration migration to PANOS XML config file